# voting-machine

./: Cargo.toml
src/: app_builder.rs  candidats.rs  configuration.rs  domain.rs  lib.rs  main.rs  service.rs  storage.rs  use_cases.rs
src/interfaces/: cli_interface.rs  lexicon.rs  mod.rs
src/interfaces/lexicons/: english.rs  french.rs
src/services/: stdio.rs
src/storages/: file.rs  memory.rs
