[package]
name = "votingmachine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.12", features = ["full"] }
clap = { version = "4.5.27", features = ["derive"] }
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
